--- a/views/index.pug
+++ b/views/index.pug
@@ -5,7 +5,7 @@ block content
     div
 
       //- Add a title or heading like My Portfolio, or Hey, Potential Employers, or Let's make the web great together! 
-      h1 Heading
+      h1= name1
 
       //- Add a description for your portfolio, what this project is, it's purpose, what it's supposed to accomplish, etc. 
       p.lead.text-light
@@ -19,9 +19,9 @@ block content
       //- Use a combination of interpolation and template literals as needed to dynamically generate the the routes in the href, as well as the img's src and the projects title.
       
       //- Here's what the Pug for each project example should look like. 
-
-      .cell
-        a(href='#')
-          img.thumbnail(src='https://placehold.it/550x550')
-          h5 Title
+      each val in data
+        .cell
+          a(href=`/projects/${val.id}`)
+            img.thumbnail(src=`${val.image_urls[0]}`)
+            h5 #{val.project_name}
       
