--- a/views/about.pug
+++ b/views/about.pug
@@ -7,41 +7,62 @@ block content
     .grid-x
       .cell.small-6.medium-9.large-9
 
-        //- Add your name.
-        h1 Name
+        //- Name Heading
+        h1 Johnny Austen
 
-        //- Feel free personalize the title below
+        //- Development Title
         p.lead.text-light
           | Full Stack JavaScript Developer.
 
-        //- Replace the boilerplate below with your Elevator pitch below.
+        //- Biography
         .portfolio-bio
           p
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position. 
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position.
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position.
+            | I first started out experimenting with websites at aged 14, way back in 2005! My first venture was an online e-sports competition site, called 
+            a(href="https://web.archive.org/web/20060413084133/http://www.rdkleague.com/" target="_blank") RDKLeague.
+            | This project involved maintaining the website's html, php & MySQL databases, which were developed by Alex Chittock.
+            | Following this, I have run and maintained many wordpress sites since. Some of these include 
+            a(href="https://www.boothsbylux.co.uk" target="_blank") Booths By Lux
+            |, 
+            a(href="https://www.gig-guide.co.uk/" target="_blank") Gig Guide
+            |, 
+            a(href="https://www.thevocalhub.co.uk" target="_blank") The Vocal Hub
+            |  and many more.
+            | #[br]#[br]
+            | In 2019, I decided to further my knowledge of the web by diving into a number of SEO resources, such as SEMRush's SEO Academy Courses produced by Greg Gifford
+            | and the Art of SEO, written by Eric Enge.
+            | #[br]#[br]
+            | Then, in 2020, I decided to really take my skills to the next level by completing TeamTreehouse's Python Techdegree program. Whilst an exciting an useful
+            | introduction to code, I felt I needed a little more grounding to get involved in the kind of projects I really wanted to. This led me to join
+            | the thoroughly comprehensive Full Stack Javascript TechDegree, of which I am currently about 2/3rds through!
+            | #[br]#[br]
+            | I am also a passionate runner and Obstacle Course Racer - mostly completing in Spartan Races. My main achievement thus far has been
+            | both qualifying for and competing at the Spartan European Championships in Dolomiti, 2019. Whilst all races have been postponed in 2020,
+            | I have been consistent with my training and will be completing my first road marathon in April 2021. I'm hoping for Sub 3, but let's see how it goes!
+
+
       .cell.portfolio-meta.small-6.medium-2.large-3
         h6 Skills
 
-        //- Replace the text in the li tags below with your own skills.  At this point, you should be able to list at least ten skills.
+        //- Skills List
         ul
-          li Express
-          li Other cool stuff
-          li Listing my skills
-          li Etc.
-          li Etc. 
-          li Etc.
+          li Full Stack Javascript
+          li NodeJS, Express & Pug
+          li jQuery, CSS/DOM
+          li Wordpress Management
+          li SEO & Content Writing
+          li Basic Python Dev
         h6 Contact Info
 
-        //- Add your own contact info
+        //-Contact Info
         ul
-          li 555-555-1234
-          li email@email.com
+          li 
+            a(href="tel:447883429286") +44 7883429286
+          li
+            a(href="mailto:rivalaudio@live.co.uk") rivalaudio@live.co.uk
 
-        //- Add URLs to the hrefs below to link to your social media accounts.
-        a.button.expanded(href='') LinkedIn
-        a.button.expanded(href='') GitHub
-        a.button.expanded(href='') Twitter
+        //- Social Media URLs
+        a.button.expanded(href='https://www.linkedin.com/in/john-austen-ab612959/' target='_blank') LinkedIn
+        a.button.expanded(href='https://github.com/jmaletto1' target="_blank") GitHub
   nav.grid-container.portfolio-breadcrumb
     a(href='/') ← Back
   
