--- a/views/error.pug
+++ b/views/error.pug
@@ -7,8 +7,7 @@ block content
     .grid-x
       .cell.small-6.medium-9.large-9
 
-        if locals.error.message
-          h3= error.message
-        else  
-          h3 I'm afraid you've reached a page that doesn't exist!
-        img(src="./static/images/404.png" width="65%")
+        //- Display the Error Message & Status.
+        h3= error.message
+        p= error.status
+        img(src="/static/images/not-found.jpg" width="65%")
