--- a/views/index.pug
+++ b/views/index.pug
@@ -4,21 +4,19 @@ block content
   article.grid-container.portfolio-intro
     div
 
-      //- Add a title or heading like My Portfolio, or Hey, Potential Employers, or Let's make the web great together! 
-      h1= name1
+      //- Portfolio Header 
+      h1 A Collection of Extraordinary Events
 
-      //- Add a description for your portfolio, what this project is, it's purpose, what it's supposed to accomplish, etc. 
+      //- Portfolio Description
       p.lead.text-light
-        | Portfolio Description
+        | That got your attention! Please feel free to peruse my most recent projects below, all completed with the likes of
+        | Javascript, jQuery, Node JS and Asynchronous Programming. If you have an interesting idea for a project, please feel
+        | free to email me at 
+        a(href="mailto:rivalaudio@live.co.uk") rivalaudio@live.co.uk.
   article.grid-container.portfolio-index
     
     .grid-x.grid-margin-x.small-up-2.medium-up-2.large-up-3
 
-      //- Use the Pug `each` iterator to create a project img, title and link in the markup for each of the projects you are showcasing.  
-      
-      //- Use a combination of interpolation and template literals as needed to dynamically generate the the routes in the href, as well as the img's src and the projects title.
-      
-      //- Here's what the Pug for each project example should look like. 
       each val in data
         .cell
           a(href=`/projects/${val.id}`)
