--- a/views/project.pug
+++ b/views/project.pug
@@ -21,10 +21,10 @@ block content
           each val in projectData.technologies
             li #{val}
 
-        //- Use template literals and interpolation to add URLs to the hrefs below so they link to the repo and the live version of each project.
+        //- Links to Live Project and GitHub Repo, displayed using Template Literals
         a.button.expanded(href=`${projectData.live_link}` target="_blank") Live Demo
         a.button.expanded(href=`${projectData.github_link}` target="_blank") GitHub Repo
     
-    //- Replace the URLs in the src attributes below with template literals and interpolation to dynamically add three project images.  You only have to add one image.  But adding more images to show your app in different states demonstrates a level of thoroughness and professionalism that potential employers will like to see. 
+    //- Images displayed using template literals and pug's "each" iteration method.
     each val, index in projectData.image_urls
       img.image(src=`${projectData.image_urls[index]}`)
