Updated Homepage Text

--- a/views/index.pug
+++ b/views/index.pug
@@ -5,7 +5,7 @@ block content
     div
 
       //- Portfolio Header 
-      h1 A Collection of Extraordinary Events
+      h1 A Collection of Extraordinary Events!
 
       //- Portfolio Description
       p.lead.text-light
