added Full Stack App

--- a/views/index.pug
+++ b/views/index.pug
@@ -10,7 +10,7 @@ block content
       //- Portfolio Description
       p.lead.text-light
         | That got your attention! Please feel free to peruse my most recent projects below, all completed with the likes of
-        | Javascript, jQuery, Node JS and Asynchronous Programming. If you have an interesting idea for a project, please feel
+        | React, Express, Sequelize, Node.js, jQuery, and Standard Javascript. If you have an interesting idea for a project, please feel
         | free to email me at 
         a(href="mailto:rivalaudio@live.co.uk") rivalaudio@live.co.uk.
   article.grid-container.portfolio-index
