--- a/views/about.pug
+++ b/views/about.pug
@@ -18,7 +18,7 @@ block content
         .portfolio-bio
           p
             | I first started out experimenting with websites at aged 14, way back in 2005! My first venture was an online e-sports competition site, called 
-            a(href="https://web.archive.org/web/20060413084133/http://www.rdkleague.com/" target="_blank") RDKLeague.
+            a(href="https://web.archive.org/web/20060413084133/http://www.rdkleague.com/" target="_blank") RDKLeague. 
             | This project involved maintaining the website's html, php & MySQL databases, which were developed by Alex Chittock.
             | Following this, I have run and maintained many wordpress sites since. Some of these include 
             a(href="https://www.boothsbylux.co.uk" target="_blank") Booths By Lux
@@ -33,7 +33,7 @@ block content
             | #[br]#[br]
             | Then, in 2020, I decided to really take my skills to the next level by completing TeamTreehouse's Python Techdegree program. Whilst an exciting an useful
             | introduction to code, I felt I needed a little more grounding to get involved in the kind of projects I really wanted to. This led me to join
-            | the thoroughly comprehensive Full Stack Javascript TechDegree, of which I am currently about 2/3rds through!
+            | the thoroughly comprehensive Full Stack Javascript TechDegree, which I completed in January 2021. I am now working on a freelance basis on a variety of projects.
             | #[br]#[br]
             | I am also a passionate runner and Obstacle Course Racer - mostly completing in Spartan Races. My main achievement thus far has been
             | both qualifying for and competing at the Spartan European Championships in Dolomiti, 2019. Whilst all races have been postponed in 2020,
@@ -58,7 +58,7 @@ block content
           li 
             a(href="tel:447883429286") +44 7883429286
           li
-            a(href="mailto:rivalaudio@live.co.uk") rivalaudio@live.co.uk
+            a(href="mailto:johnnydausten@gmail.com") johnnydausten@gmail.com
 
         //- Social Media URLs
         a.button.expanded(href='https://www.linkedin.com/in/john-austen-ab612959/' target='_blank') LinkedIn
