--- a/views/index.pug
+++ b/views/index.pug
@@ -12,7 +12,7 @@ block content
         | That got your attention! Please feel free to peruse my most recent projects below, all completed with the likes of
         | React, Express, Sequelize, Node.js, jQuery, and Standard Javascript. If you have an interesting idea for a project, please feel
         | free to email me at 
-        a(href="mailto:rivalaudio@live.co.uk") rivalaudio@live.co.uk.
+        a(href="mailto:johnnydausten@gmail.com") johnnydausten@gmail.com.
   article.grid-container.portfolio-index
     
     .grid-x.grid-margin-x.small-up-2.medium-up-2.large-up-3
