--- a/views/about.pug
+++ b/views/about.pug
@@ -46,6 +46,7 @@ block content
         //- Skills List
         ul
           li Full Stack Javascript
+          li React
           li NodeJS, Express & Pug
           li jQuery, CSS/DOM
           li Wordpress Management
